FIX: squash bug

--- a/47/style.css
+++ b/47/style.css
@@ -12,6 +12,7 @@
 }
 
 * {
+  touch-action: manipulation;
   transition: all 1s ease;
 }
 
